--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,7 @@
     "license": "ISC",
     "description": "",
     "dependencies": {
-        "express": "^4.21.1"
+        "express": "^4.21.1",
+        "express-session": "^1.18.1"
     }
 }
